--- a/CS282-HW3-1/gd.ipynb
+++ b/CS282-HW3-1/gd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,9 +187,9 @@
     }
    ],
    "source": [
-    "for i in range(5):\n",
+    "for i in range(100000):\n",
     "    # theta -= 0.1 * np.ones(5).reshape(5,1)\n",
-    "    theta =  theta - 0.000001 * (train_x.T).dot(train_x.dot(theta)-train_y)\n",
+    "    theta =  theta - 0.0000001 * (train_x.T).dot(train_x.dot(theta)-train_y)\n",
     "    print(theta)\n",
     "    print(train_x.dot(theta)-train_y)"
    ]
