--- a/CS282-HW3-1/normal_equation.ipynb
+++ b/CS282-HW3-1/normal_equation.ipynb
@@ -2,24 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  14.96   41.76 1024.07   73.17  463.26]\n",
+      " [  25.18   62.96 1020.04   59.08  444.37]\n",
+      " [   5.11   39.4  1012.16   92.14  488.56]\n",
+      " [  20.86   57.32 1010.24   76.64  446.48]\n",
+      " [  10.82   37.5  1009.23   96.62  473.9 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "reader = pd.read_csv('data/data_set.csv', iterator=True)\n",
     "\n",
-    "train_data = reader.get_chunk(5).to_numpy()\n",
+    "TRAINING_SIZE = 5\n",
+    "\n",
+    "train_data = reader.get_chunk(TRAINING_SIZE).to_numpy()\n",
     "print(train_data) # ok"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  14.96   41.76 1024.07   73.17]\n",
+      " [  25.18   62.96 1020.04   59.08]\n",
+      " [   5.11   39.4  1012.16   92.14]\n",
+      " [  20.86   57.32 1010.24   76.64]\n",
+      " [  10.82   37.5  1009.23   96.62]]\n",
+      "[[463.26]\n",
+      " [444.37]\n",
+      " [488.56]\n",
+      " [446.48]\n",
+      " [473.9 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "x, Y = np.split(train_data, (4,), axis=1)\n",
     "print(x) # ok\n",
@@ -28,42 +60,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.00000e+00 1.49600e+01 4.17600e+01 1.02407e+03 7.31700e+01]\n",
+      " [1.00000e+00 2.51800e+01 6.29600e+01 1.02004e+03 5.90800e+01]\n",
+      " [1.00000e+00 5.11000e+00 3.94000e+01 1.01216e+03 9.21400e+01]\n",
+      " [1.00000e+00 2.08600e+01 5.73200e+01 1.01024e+03 7.66400e+01]\n",
+      " [1.00000e+00 1.08200e+01 3.75000e+01 1.00923e+03 9.66200e+01]]\n"
+     ]
+    }
+   ],
    "source": [
-    "X = np.insert(x, 0, np.ones(5), axis=1)\n",
+    "X = np.insert(x, 0, np.ones(len(x)), axis=1)\n",
     "print(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.09864076e+04]\n",
+      " [-1.41759697e-01]\n",
+      " [ 1.28294594e+01]\n",
+      " [ 1.93522239e+01]\n",
+      " [ 1.50061243e+01]]\n",
+      "8.940356943027699e-06\n"
+     ]
+    }
+   ],
    "source": [
     "theta = np.linalg.pinv(np.dot(X.T, X)).dot(X.T).dot(Y)\n",
-    "print(theta)"
+    "print(theta)\n",
+    "\n",
+    "loss = np.linalg.norm(X.dot(theta)-Y)\n",
+    "print(loss)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[443.67 467.35 478.42 475.98 477.5  453.02 453.99 440.29 451.28 433.99\n",
+      " 462.19 467.54 477.2  459.85 464.3  468.27 495.24 483.8  443.61 436.06\n",
+      " 443.25 464.16 475.52 484.41 437.89 445.11 438.86 440.98 436.65 444.26\n",
+      " 465.86 444.37 450.69 469.02 448.86 447.14 469.18 482.8  476.7  474.99\n",
+      " 444.22 461.33 448.06 474.6  473.05 432.06 467.41 430.12 473.62 471.81\n",
+      " 442.99 442.77 491.49 447.46 446.11 442.44 446.22 471.49 463.5  440.01\n",
+      " 441.03 452.68 474.91 478.77 434.2  437.91 477.61 431.65 430.57 481.09\n",
+      " 445.56 475.74 435.12 446.15 436.64 436.69 468.75 466.6  465.48 441.34\n",
+      " 441.83 464.7  437.99 459.12 429.69 459.8  433.63 442.84 485.13 459.12\n",
+      " 445.31 480.8  432.55 443.86 449.77 470.71 452.17 478.29 428.54 478.27\n",
+      " 439.58 457.32 475.51 439.66 471.99 479.81 434.78 446.58 437.76 459.36\n",
+      " 462.28 464.33 444.36 438.64 470.49 455.13 450.22 440.43 482.98 460.44\n",
+      " 444.97 433.94 439.73 434.48 442.33 457.67 454.66 432.21 457.66 435.21\n",
+      " 448.22 475.51 446.53 441.3  433.54 472.52 474.77 435.1  450.74 442.7\n",
+      " 426.56 463.71 447.06 452.27 445.78 438.65 480.15 447.19 443.04 488.81\n",
+      " 455.75 455.86 457.68 479.11 432.84 448.37 447.06 443.53 445.21 441.7\n",
+      " 450.93 451.44 441.29 458.85 481.46 467.19 461.54 439.08 467.22 468.8\n",
+      " 426.93 474.65 468.97 433.97 450.53 444.51 469.03 466.56 457.57 440.13\n",
+      " 433.24 452.55 443.29 431.76 454.97 456.7  486.03 472.79 452.03 443.41\n",
+      " 441.93 432.64 480.25 466.68 494.39 454.72 448.71 469.76 450.71 444.01\n",
+      " 453.2  450.87 441.73 465.09 447.28 491.16 450.98 446.3  436.48 460.84\n",
+      " 442.56 467.3  479.13 441.15 445.52 475.4  469.3  463.57 445.32 461.03\n",
+      " 466.74 444.04 434.01 465.23 440.6  466.74 433.48 473.59 474.81 454.75\n",
+      " 452.94 435.83 482.19 466.66 462.59 447.82 462.73 447.98 462.72 442.42\n",
+      " 444.69 466.7  453.84 436.92]\n"
+     ]
+    }
+   ],
    "source": [
-    "test_set = reader.get_chunk(500).iloc[:, :4]\n",
-    "print(test_set)"
+    "test_set = reader.get_chunk(500)\n",
+    "test_y = test_set.iloc[:, 4].to_numpy()\n",
+    "print(test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.00000e+00 2.62700e+01 5.94400e+01 1.01223e+03 5.87700e+01]\n",
+      " [1.00000e+00 1.58900e+01 4.39600e+01 1.01402e+03 7.52400e+01]\n",
+      " [1.00000e+00 9.48000e+00 4.47100e+01 1.01912e+03 6.64300e+01]\n",
+      " ...\n",
+      " [1.00000e+00 1.40100e+01 3.90000e+01 1.01673e+03 7.92300e+01]\n",
+      " [1.00000e+00 1.94000e+01 6.46300e+01 1.02038e+03 8.11000e+01]\n",
+      " [1.00000e+00 3.01500e+01 6.73200e+01 1.01383e+03 3.28000e+01]]\n"
+     ]
+    }
+   ],
    "source": [
-    "test_x = np.insert(test_set.to_numpy(), 0, np.ones(244), axis=1)\n",
+    "test_x = np.insert(test_set.iloc[:, :4].to_numpy(), 0, np.ones(len(test_set)), axis=1)\n",
     "print(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pred = test_x.dot(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.figure(figsize=(8, 4))  # figsize:确定画布大小 \n",
+    "\n",
+    "# plt.scatter(test_pred, test_y, c=\"blue\", label = 'test data' )\n",
+    "# plt.scatter(X.dot(theta), Y, c='red', label='training data') \n",
+    "\n",
+    "# t = np.linspace(400, 500, 200)\n",
+    "# plt.plot(t, t, 'r', label='y=x')\n",
+    "# plt.xlabel(u'predicted value', fontsize=18)\n",
+    "# plt.ylabel(u'true value', fontsize=18)\n",
+    "\n",
+    "# plt.legend()  # 显示图例\n",
+    "\n",
+    "# plt.show()  # 显示所绘图形"
    ]
   },
   {
@@ -75,255 +212,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 243.26301388]\n",
-      " [ 327.92579681]\n",
-      " [ 304.94895783]\n",
-      " [ -18.43927347]\n",
-      " [ 277.22912472]\n",
-      " [ 217.43284163]\n",
-      " [ 212.44474582]\n",
-      " [ 786.97019769]\n",
-      " [ 288.80630016]\n",
-      " [ 749.54388915]\n",
-      " [-123.96323057]\n",
-      " [ 115.85152976]\n",
-      " [ 500.237915  ]\n",
-      " [ 458.6341584 ]\n",
-      " [ -19.88998466]\n",
-      " [  77.74187851]\n",
-      " [ 221.86115096]\n",
-      " [ 322.18700301]\n",
-      " [ 166.63449735]\n",
-      " [-128.72398753]\n",
-      " [ 581.92024809]\n",
-      " [ 171.32005104]\n",
-      " [ 660.63378109]\n",
-      " [ 443.86022882]\n",
-      " [  71.298614  ]\n",
-      " [ 215.29866348]\n",
-      " [ 344.54640546]\n",
-      " [ 383.45697478]\n",
-      " [ 688.0695273 ]\n",
-      " [ 213.58523974]\n",
-      " [ 412.41560508]\n",
-      " [ 518.81373968]\n",
-      " [ 500.76679856]\n",
-      " [ 286.08031694]\n",
-      " [ 433.76401962]\n",
-      " [ 269.07223334]\n",
-      " [ 480.04442232]\n",
-      " [ 451.00209989]\n",
-      " [ 512.00543686]\n",
-      " [ 554.50420489]\n",
-      " [ 196.60517576]\n",
-      " [ 417.71904259]\n",
-      " [  48.51601749]\n",
-      " [ -31.37962046]\n",
-      " [ 602.82199685]\n",
-      " [ 164.29105818]\n",
-      " [ 479.06604037]\n",
-      " [ 595.64305228]\n",
-      " [ 589.53334764]\n",
-      " [ 327.90636864]\n",
-      " [ 358.2507457 ]\n",
-      " [ 331.58607604]\n",
-      " [ 500.1018841 ]\n",
-      " [ 486.83653903]\n",
-      " [  28.83370139]\n",
-      " [ 119.63403207]\n",
-      " [ 189.45584142]\n",
-      " [ 579.76525281]\n",
-      " [ 433.97877906]\n",
-      " [ 392.8624288 ]\n",
-      " [ 133.12127343]\n",
-      " [ 631.74413829]\n",
-      " [ 636.03634838]\n",
-      " [ 273.44201578]\n",
-      " [ 357.8250953 ]\n",
-      " [ 883.67300046]\n",
-      " [ 828.89266524]\n",
-      " [ 909.37278639]\n",
-      " [ 511.66841132]\n",
-      " [ 212.83291439]\n",
-      " [ 522.08993928]\n",
-      " [   5.13693638]\n",
-      " [ 808.99403059]\n",
-      " [ 747.55731471]\n",
-      " [ 415.79439486]\n",
-      " [ 294.16807216]\n",
-      " [ 472.5720969 ]\n",
-      " [-243.60153387]\n",
-      " [ 640.63377648]\n",
-      " [1015.43368373]\n",
-      " [ 874.11895789]\n",
-      " [ 190.25966979]\n",
-      " [ 182.36634995]\n",
-      " [ 465.16039229]\n",
-      " [ -46.32378808]\n",
-      " [ 580.6879752 ]\n",
-      " [ 592.75071211]\n",
-      " [ 154.22378696]\n",
-      " [ 330.8397159 ]\n",
-      " [ 292.66332502]\n",
-      " [ 605.41935557]\n",
-      " [ 336.01064895]\n",
-      " [ 102.09161668]\n",
-      " [ 587.41303906]\n",
-      " [ 850.74844283]\n",
-      " [ 335.8410379 ]\n",
-      " [ 452.80525104]\n",
-      " [ 270.1283008 ]\n",
-      " [ 353.56419624]\n",
-      " [ 622.01958208]\n",
-      " [ 184.15445486]\n",
-      " [ 335.70698656]\n",
-      " [ 662.53609436]\n",
-      " [ 748.25850789]\n",
-      " [ 374.92232724]\n",
-      " [ 538.46956268]\n",
-      " [ 883.19585434]\n",
-      " [ 231.37264647]\n",
-      " [ 193.65748146]\n",
-      " [-145.87511545]\n",
-      " [-228.51915187]\n",
-      " [ 242.06602205]\n",
-      " [  64.68706454]\n",
-      " [ 520.19463061]\n",
-      " [ 172.66055237]\n",
-      " [-432.40539866]\n",
-      " [ 379.07500746]\n",
-      " [ 615.33256441]\n",
-      " [ 518.41603595]\n",
-      " [ 793.44288548]\n",
-      " [ 273.88495715]\n",
-      " [ 114.23225434]\n",
-      " [ 825.86392463]\n",
-      " [ 555.25845489]\n",
-      " [ 715.22402967]\n",
-      " [  -3.12753153]\n",
-      " [ 519.86776676]\n",
-      " [ 375.03796605]\n",
-      " [ 320.99488358]\n",
-      " [ 364.06569127]\n",
-      " [ 187.3318282 ]\n",
-      " [ 395.52974099]\n",
-      " [ 619.80654582]\n",
-      " [  30.65259237]\n",
-      " [ 265.270461  ]\n",
-      " [ 445.557191  ]\n",
-      " [ 462.34648975]\n",
-      " [-119.55316752]\n",
-      " [ 613.80443838]\n",
-      " [ 485.42030413]\n",
-      " [ 237.06846327]\n",
-      " [ 378.29736736]\n",
-      " [ 428.55880507]\n",
-      " [ 468.67611313]\n",
-      " [ 172.66095295]\n",
-      " [ 848.61235403]\n",
-      " [ 458.61772834]\n",
-      " [ 491.69052503]\n",
-      " [ 229.75626889]\n",
-      " [ 496.07923147]\n",
-      " [ 735.69799029]\n",
-      " [ 806.37547127]\n",
-      " [ 154.27326376]\n",
-      " [ 493.61117574]\n",
-      " [ 578.9308597 ]\n",
-      " [ 500.83918369]\n",
-      " [ 276.27504084]\n",
-      " [  10.07543916]\n",
-      " [ 750.3413817 ]\n",
-      " [  20.45334397]\n",
-      " [ 442.54664996]\n",
-      " [ 560.94736123]\n",
-      " [ 351.68555479]\n",
-      " [ -46.72973722]\n",
-      " [ 395.38153402]\n",
-      " [ 464.39202407]\n",
-      " [ 362.07215026]\n",
-      " [ -30.5049424 ]\n",
-      " [ 529.75644876]\n",
-      " [ 200.30369831]\n",
-      " [ 232.9337546 ]\n",
-      " [ 374.57410661]\n",
-      " [ 625.85754521]\n",
-      " [ 788.50319241]\n",
-      " [ 692.97800774]\n",
-      " [ 383.62497424]\n",
-      " [ 246.74094247]\n",
-      " [ 787.16095786]\n",
-      " [ -21.50772236]\n",
-      " [ 326.8596718 ]\n",
-      " [ 325.5207319 ]\n",
-      " [ 212.79370146]\n",
-      " [ 289.65200305]\n",
-      " [ 557.20636344]\n",
-      " [ -64.95241312]\n",
-      " [ 828.60963512]\n",
-      " [ 325.56431326]\n",
-      " [ 341.60441674]\n",
-      " [ 620.11403176]\n",
-      " [ 580.12299322]\n",
-      " [ 382.55729374]\n",
-      " [ 532.14900966]\n",
-      " [ 402.37180091]\n",
-      " [ 211.37357919]\n",
-      " [ 248.72774188]\n",
-      " [ 427.56529618]\n",
-      " [ 598.58521418]\n",
-      " [ 376.0013948 ]\n",
-      " [ 252.87795433]\n",
-      " [ 442.99114172]\n",
-      " [ 598.931623  ]\n",
-      " [ 627.38813315]\n",
-      " [ 432.01332353]\n",
-      " [ 402.3890378 ]\n",
-      " [ 373.18969335]\n",
-      " [ 498.7203313 ]\n",
-      " [ 649.77798057]\n",
-      " [ 457.66641501]\n",
-      " [ 589.19719593]\n",
-      " [ 358.91313559]\n",
-      " [ 312.82934668]\n",
-      " [ 618.26870314]\n",
-      " [ 744.11887984]\n",
-      " [ 226.33528095]\n",
-      " [ 644.44191042]\n",
-      " [ 469.0574117 ]\n",
-      " [ 264.32845086]\n",
-      " [ 698.52202521]\n",
-      " [ 532.08621646]\n",
-      " [ 534.07358646]\n",
-      " [ -88.96392638]\n",
-      " [ 354.68332129]\n",
-      " [ 361.60764345]\n",
-      " [ 601.65221798]\n",
-      " [ 511.99879137]\n",
-      " [ 792.11326307]\n",
-      " [ 787.93306256]\n",
-      " [ 526.50329634]\n",
-      " [ 268.01706623]\n",
-      " [ 292.47877902]\n",
-      " [ 248.77112632]\n",
-      " [ 366.00075092]\n",
-      " [ 315.98150276]\n",
-      " [ 566.67439088]\n",
-      " [ 574.96897927]\n",
-      " [ 428.30755246]\n",
-      " [ 614.66700458]\n",
-      " [ 678.74366441]\n",
-      " [ 175.05710184]\n",
-      " [ 450.73153869]\n",
-      " [ 365.10044895]\n",
-      " [ 376.87714943]\n",
-      " [ 803.6291779 ]\n",
-      " [ -14.936364  ]]\n"
+      "3599848042.7098727\n",
+      "218290658.79888767\n"
      ]
     }
    ],
    "source": [
-    "print(test_x.dot(theta))"
+    "test_pred_mean = np.mean(test_pred)\n",
+    "# print(test_pred_mean)\n",
+    "\n",
+    "# test_pred_mean_arr = np.full_like(test_pred, test_pred_mean)\n",
+    "\n",
+    "_var = np.square(np.linalg.norm(test_pred - test_pred_mean))\n",
+    "\n",
+    "bias = np.square(np.linalg.norm(test_y - test_pred_mean))\n",
+    "# print(test_pred_mean_arr)\n",
+    "# print(test_y.flatten())\n",
+    "print(_var)\n",
+    "print(bias)"
    ]
   }
  ],
