--- a/CS282-HW3-1/plot.ipynb
+++ b/CS282-HW3-1/plot.ipynb
@@ -39,7 +39,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.15 ('hw38')",
+   "display_name": "Python 3.8.15 ('car38')",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +58,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4941609764f30fcd6b2cdb1ef7b611d705270b585f61391d7dec41d684fa3874"
+    "hash": "9a43cbd6c1ef2384b5f3316347ea8c5410f2f4d6d7ad6c251c5559a195daba72"
    }
   }
  },
